--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span id="block0">0</span>
         <span id="dot">.</span>
         <span id="ans">=</span>
-        <span id="ans">#GG</span>
+        <span id="ans"></span>
       </div>
     </div>
     <script>
